# aanoteapp

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
.hermes/plans/: 2026-07-18_214900-tui-notes-plan.md
css/: style.css
js/: app.js  cm.bundle.js  editor.js  gdrive-config.example.js  icons.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_commands.rs  gdrive.rs  main.rs
test-notes/: readme.md  todo.md
test-notes/journal/: july.md
test-notes/projects/: skiathos.md
