[package]
name = "aanote"
version = "0.1.0"
description = "Terminal-aesthetic markdown notes"
authors = ["pk"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
keyring = "2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
url = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
